--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -11,3 +11,11 @@
 "https://www.{default}/":
     type: redirect
     to: "https://{default}/"
+    
+"https://{default}/":
+    type: redirect
+    to: "http://{default}/"
+
+"https://www.{default}/":
+    type: redirect
+    to: "http://{default}/"
